--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "contentful": "^9.2.11",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "decimal.js": "^10.4.2",
     "discord.js": "14.11.0",
     "form-data": "^4.0.0",
     "fuse.js": "^6.6.2",
     "glob": "^8.0.3",
     "http-status-codes": "^2.2.0",
-    "luxon": "^3.1.0",
+    "luxon": "^3.2.1",
     "mailgun.js": "^8.0.2",
     "mjml": "^4.13.0",
     "next": "13.5.6",
@@ -80,12 +80,12 @@
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.3.0",
     "sass": "^1.56.1",
-    "sharp": "^0.31.2",
+    "sharp": "^0.33.1",
     "snoowrap": "^1.23.0",
     "superjson": "^1.11.0",
     "tailwindcss": "^3.4.0",
     "ts-morph": "^17.0.1",
-    "zod": "^3.19.1",
+    "zod": "^3.22.4",
     "zustand": "4.1.1"
   },
   "devDependencies": {
@@ -126,7 +126,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.8",
     "prisma": "5.6.0",
     "tailwind-scrollbar": "^3.0.4",
@@ -139,5 +139,26 @@
   },
   "engines": {
     "pnpm": ">=8.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "d3-color@<3.1.0": ">=3.1.0",
+      "cookiejar@<2.1.4": ">=2.1.4",
+      "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
+      "undici@<5.26.2": ">=5.26.2",
+      "semver@<5.7.2": ">=5.7.2",
+      "semver@>=6.0.0 <6.3.1": ">=6.3.1",
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2",
+      "axios@>=0.8.1 <1.6.0": ">=1.6.0",
+      "@adobe/css-tools@<4.3.1": ">=4.3.1",
+      "next-auth@<4.24.5": ">=4.24.5",
+      "json5@<1.0.2": ">=1.0.2",
+      "json5@>=2.0.0 <2.2.2": ">=2.2.2",
+      "word-wrap@<1.2.4": ">=1.2.4",
+      "tough-cookie@<4.1.3": ">=4.1.3",
+      "@babel/traverse@<7.23.2": ">=7.23.2",
+      "@adobe/css-tools@<4.3.2": ">=4.3.2"
+    }
   }
 }
